2004-07-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mel-g.el (gzip64-external-encoder): Change default value to
	cause more recognizable error.
	(gzip64-external-decoder): Ditto.

2004-06-09  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* std11.el (std11-parse-word-or-comment-or-period): Renamed from
	`std11-parse-word-or-comment' and allow period.
	(std11-parse-phrase): Allow parsing obs-phrase in rfc2822.

2004-05-24  Len Trigg  <lenbok@myrealbox.com>

	* mime-conf.el (mime-format-mailcap-command): Quote a file name
	which may contain spaces using `shell-quote-argument' in order to
	pass it to the shell safely.

2004-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-encode.el (mime-encode-header-in-buffer): Don't ignore a
	space char at the beginning of a field body in order to honor the
	76-column rule which is described in RFC 2047 section 2.

2004-04-15  MORIOKA Tomohiko  <tomo@m17n.org>

	* eword-decode.el (eword-decode-encoded-text): Fix bug when
	`must-unfold' is specified; eliminate CR too when `must-unfold' is
	specified.

2004-04-13  Kenichi Okada  <okada@opaopa.org>

	* mel-u.el (mime-write-decoded-region): Use make-temp-file.
	(uuencode-external-decode-region): Ditto.

2004-04-12  Kenichi Okada  <okada@opaopa.org>

	* mel-u.el (mime-write-decoded-region): Use temporary filename.

2004-03-05  Jesper Harder  <harder@ifa.au.dk>

	* sha1-el.el (sha1-maximum-internal-length): Doc fix.

2004-02-23  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lunit.el (lunit-make-test-suite-from-class): Fix regexp.
	Use "^test" instead of "^test-".

2004-02-19  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lunit.el (lunit-assert): Avoid double-eval `condtion-expr'.
	Use ,(not (not condition)) instead of ,condition.

2004-02-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lunit.el (lunit-make-test-suite-from-class): Restrict test
	method name to test-*.

2004-02-17  Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-starttls-program): New user option.
	(smtp-starttls-extra-args): New user option.